updated CSS and html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Wahba's Portfolio</title>
     <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
+
 <body>
     <!--Header and Nav -->
     <header>
-       <div>
-         <h1>Portfolio</h1>
+        <div>
+            <h1>Portfolio</h1>
         </div>
         <nav>
             <ul>
@@ -18,7 +20,8 @@
                     <a href="">About Me</a>
                 </li>
                 <li>
-                    <a href="https://bootcamp.unc.edu/data/landing/?s=Google-Brand&pkw=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&pcrid=650636265496&pmt=b&utm_source=google&utm_medium=cpc&utm_campaign=GGL%7CUNC-CHAPEL-HILL%7CSEM%7CDATA%7C-%7COFL%7CTIER-1%7CALL%7CBRD%7CBMM%7CSecondary%7CBootcamp&utm_term=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&s=google&k=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&utm_adgroupid=107402836966&utm_locationphysicalms=9009740&utm_matchtype=b&utm_network=g&utm_device=c&utm_content=650636265496&utm_placement=&gad_source=1&gclid=Cj0KCQjwzva1BhD3ARIsADQuPnV42cB7WZAXw0qbzVyRZ2CI35D1UQJk2iBcMlopKyV7zus_1YUHUHEaArMNEALw_wcB&gclsrc=aw.dshttps://bootcamp.unc.edu/data/landing/?s=Google-Brand&pkw=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&pcrid=650636265496&pmt=b&utm_source=google&utm_medium=cpc&utm_campaign=GGL%7CUNC-CHAPEL-HILL%7CSEM%7CDATA%7C-%7COFL%7CTIER-1%7CALL%7CBRD%7CBMM%7CSecondary%7CBootcamp&utm_term=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&s=google&k=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&utm_adgroupid=107402836966&utm_locationphysicalms=9009740&utm_matchtype=b&utm_network=g&utm_device=c&utm_content=650636265496&utm_placement=&gad_source=1&gclid=Cj0KCQjwzva1BhD3ARIsADQuPnV42cB7WZAXw0qbzVyRZ2CI35D1UQJk2iBcMlopKyV7zus_1YUHUHEaArMNEALw_wcB&gclsrc=aw.ds" target= "_blank">UNC Bootcamp</a>
+                    <a href="https://bootcamp.unc.edu/data/landing/?s=Google-Brand&pkw=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&pcrid=650636265496&pmt=b&utm_source=google&utm_medium=cpc&utm_campaign=GGL%7CUNC-CHAPEL-HILL%7CSEM%7CDATA%7C-%7COFL%7CTIER-1%7CALL%7CBRD%7CBMM%7CSecondary%7CBootcamp&utm_term=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&s=google&k=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&utm_adgroupid=107402836966&utm_locationphysicalms=9009740&utm_matchtype=b&utm_network=g&utm_device=c&utm_content=650636265496&utm_placement=&gad_source=1&gclid=Cj0KCQjwzva1BhD3ARIsADQuPnV42cB7WZAXw0qbzVyRZ2CI35D1UQJk2iBcMlopKyV7zus_1YUHUHEaArMNEALw_wcB&gclsrc=aw.dshttps://bootcamp.unc.edu/data/landing/?s=Google-Brand&pkw=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&pcrid=650636265496&pmt=b&utm_source=google&utm_medium=cpc&utm_campaign=GGL%7CUNC-CHAPEL-HILL%7CSEM%7CDATA%7C-%7COFL%7CTIER-1%7CALL%7CBRD%7CBMM%7CSecondary%7CBootcamp&utm_term=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&s=google&k=%2Bunc%20%2Bchapel%20%2Bhill%20%2Bdata%20%2Bbootcamp&utm_adgroupid=107402836966&utm_locationphysicalms=9009740&utm_matchtype=b&utm_network=g&utm_device=c&utm_content=650636265496&utm_placement=&gad_source=1&gclid=Cj0KCQjwzva1BhD3ARIsADQuPnV42cB7WZAXw0qbzVyRZ2CI35D1UQJk2iBcMlopKyV7zus_1YUHUHEaArMNEALw_wcB&gclsrc=aw.ds"
+                        target="_blank">UNC Bootcamp</a>
                 </li>
                 <li>
                     <a href="">Contact me</a>
@@ -31,7 +34,7 @@
     </header>
     <!-- Hero Image -->
     <section class="hero-image">
-        <div> 
+        <div>
             <img src="./assets/images/Wahba.png" alt="An image of Michael">
         </div>
     </section>
@@ -39,10 +42,11 @@
     <section id="about me" class="about-me">
         <div class="title">
             <h2>About Me</h2>
-            
+
         </div>
         <div>
-            <p>My name is Michael and I currently live in Raleigh N.C. I've enrolled in coding bootcamp program at University of North Carolina in Chapel Hill. This is my second challenge assignment in this program.</p>
+            <p>My name is Michael and I currently live in Raleigh N.C. I've enrolled in coding bootcamp program at
+                University of North Carolina in Chapel Hill. This is my second challenge assignment in this program.</p>
         </div>
     </section>
     <!-- Work -->
@@ -50,9 +54,9 @@
         <div class="title">
             <h2>Work</h2>
         </div>
-            <div class="grid">
-               <div class="grid-wrapper">
-                <a href="https://mwahba624.github.io/prework-study-guide/"  target="_blank" class="project-1">
+        <div class="grid">
+            <div class="grid-wrapper">
+                <a href="https://mwahba624.github.io/prework-study-guide/" target="_blank" class="project-1">
                     <div class="project-label">
                         <h3>Prework Study Guide</h3>
                         <p>HTML & CSS & JavaScript</p>
@@ -64,7 +68,7 @@
                         <p>HTML CSS Git Challenge</p>
                     </div>
                 </a>
-                <a href="./assets/images/Mountain 3.jpeg" target="_blank" class="project-3">
+                <a href="https://mwahba624.github.io/Great-sphinx-/" target="_blank" class="project-3">
                     <div class="project-label">
                         <h3>Portfolio</h3>
                         <p>Advanced css challenge</p>
@@ -82,26 +86,23 @@
                         <p>An App that enables a payroll data</p>
                     </div>
                 </a>
-                </div>
             </div>
+        </div>
     </section>
     <!-- Footer -->
-<footer id="contact me">
-    <div class="title">
-        <h2>Contact Me</h2>
-    </div>
-    <div class="content-wrapper">
-        <div id="contact-list">
-            <ul>
-                <p>
-                    <a href="mailto:someone@gmail.com" target="_blank">Email</a>
-                    <a href="https://github.com/mwahba624/" target="_blank">GitHub</a>
-                    <a href="https://www.linkedin.com/feed/" target="_blank">linkedin</a>
-                    <a href="tel:+(555)-555-5555" target="_blank">Phone Number</a>
-                </p>
-            </ul>
+    <footer id="contact me">
+        <div class="title">
+            <h2>Contact Me</h2>
         </div>
-    </div>
-</footer>
+        <div class="content-wrapper">
+            <div id="contact-list">
+                <a href="mailto:someone@gmail.com" target="_blank">Email</a>
+                <a href="https://github.com/mwahba624/" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/feed/" target="_blank">linkedin</a>
+                <a href="tel:+(555)-555-5555" target="_blank">Phone Number</a>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
